examples/ipmx/invalid/02_fails_st2110.sdp
v=0
o=- 3001 1 IN IP4 192.168.1.1
s=IPMX Invalid — Has extmap But Fails ST2110 Check (no ts-refclk)
t=0 0
a=extmap:1 urn:ietf:params:rtp-hdrext:smpte-tc
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.1.1/64
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; TP=2110TPN
a=mediaclk:direct=0
